fix: fix stuck <legend> tags on iPhone

--- a/source/sass/blocks/cart-form.scss
+++ b/source/sass/blocks/cart-form.scss
@@ -219,6 +219,7 @@
   margin: 0 0 2px;
   font-size: 16px;
   line-height: 19px;
+  font-weight: 500;
   text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
